--- a/{{cookiecutter.project_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.project_name}}/.pre-commit-config.yaml
@@ -8,6 +8,8 @@ repos:
     hooks:
       - id: check-added-large-files
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v0.812"
+    rev: "v0.920"
     hooks:
       - id: mypy
+        additional_dependencies:
+          - "pydantic"
