--- a/{{cookiecutter.project_name}}/.github/workflows/action.yml
+++ b/{{cookiecutter.project_name}}/.github/workflows/action.yml
@@ -18,6 +18,13 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - uses: actions/cache@v2
+      name: Configure pip caching
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
       - run: pip install -r requirements.txt
       - name: run main.py
         run: |
