--- a/{{cookiecutter.project_name}}/makefile
+++ b/{{cookiecutter.project_name}}/makefile
@@ -1,3 +1,16 @@
+.PHONY:lint codegen
+
 lint:
 	git add .
 	pre-commit
+
+codegen:
+	datamodel-codegen\
+		--input $(path)\
+		--input-file-type json\
+		--output models/$(name).py\
+		--class-name $(name)\
+		--snake-case-field\
+		--use-schema-description\
+		--use-title-as-name\
+		--target-python-version 3.9
