--- a/{{cookiecutter.project_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.project_name}}/.pre-commit-config.yaml
@@ -13,25 +13,15 @@ repos:
       - id: debug-statements
       - id: detect-private-key
       - id: end-of-file-fixer
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.942
-    hooks:
-      - id: mypy
-        args: ["--no-strict-optional", "--ignore-missing-imports"]
   - repo: https://github.com/ambv/black
-    rev: 21.9b0
+    rev: 22.8.0
     hooks:
       - id: black
         name: Run black formatter
-        language_version: python3.8
+        language_version: python3.9
   - repo: https://github.com/asottile/pyupgrade
     rev: v2.26.0
     hooks:
       - id: pyupgrade
         name: Check for code that can use new Python features
         args: [--py38-plus]
-  - repo: https://github.com/Lucas-C/pre-commit-hooks-safety
-    rev: v1.2.2
-    hooks:
-      - id: python-safety-dependencies-check
-        name: Check for vulnerable dependencies
