--- a/{{cookiecutter.project_name}}/makefile
+++ b/{{cookiecutter.project_name}}/makefile
@@ -8,7 +8,7 @@ codegen:
 	datamodel-codegen\
 		--input $(path)\
 		--input-file-type json\
-		--output models/$(name).py\
+		--output models/source/$(name).py\
 		--class-name $(name)\
 		--snake-case-field\
 		--use-schema-description\
